resources/css/style.css
body {
    background-color: black;
    opacity: 0.9;
    font-family: helvetica, arial, sans-serif;
    color: seashell;
    font-size: 22px;
    text-align: center;
    margin: 0%;
}

header {
    position: fixed;
    height: 69px;
    width: 100%;
    padding: 0px 10px;
    border-bottom: 1px solid seashell;
    background-color: black;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

nav a{
    color: seashell;
    margin: 0px 10px;
}

nav {
    margin: 0px 10px; 
}

.spacer{
height: 70px;
}

.hero {
     height: 700px;
     width: 1200px;
     background-image: url(../images/img-mission-background.jpeg);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
    
}

.hero-text {
    background-color: black;
}

.month {
    width: 1000px;
}

.blurbs {
    width: 1000px;
    display: flex;
    flex-wrap: wrap;
  
}

.locations {
  height: 500px;
  width: 1200px;
  background-image: url(../images/img-locations-background.jpeg);
  display: flex;
  flex-direction: column;
}

.all-addresses {
  display: flex;
  justify-content: center;
}

.address {
    background-color: black;
    width: 300px;
    margin: 15px 20px;
}

